Solve first-class visibility by multiplying style layers instead of using "zoom" filter
Because I failed to get fractional-zoom threshold with all other methods, they defaulted to integer z

This lead to much more "clickable" layers therefore i switched to the concept of "potentially_clickable_layers"

--- a/css/scale.css
+++ b/css/scale.css
@@ -11,7 +11,7 @@
     align-items: flex-end;
     margin-bottom: 10px;
     user-select: none;
-    pointer-events: none;
+    pointer-events: none !important;
     position: relative;
 }
 
